--- a/event_mineducacion/i18n/es_CO.po
+++ b/event_mineducacion/i18n/es_CO.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 12.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-29 17:54+0000\n"
-"PO-Revision-Date: 2020-05-29 17:54+0000\n"
+"POT-Creation-Date: 2020-06-01 17:45+0000\n"
+"PO-Revision-Date: 2020-06-01 17:45+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -21,6 +21,11 @@ msgid "Analytic account"
 msgstr "Cuenta analítica"
 
 #. module: event_mineducacion
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition_line__currency_id
+msgid "Currency"
+msgstr "Moneda"
+
+#. module: event_mineducacion
 #: model:ir.model,name:event_mineducacion.model_event_event
 msgid "Event"
 msgstr "Evento"
@@ -31,11 +36,38 @@ msgid "Purchase Requisition"
 msgstr "Requerimiento de Compra"
 
 #. module: event_mineducacion
+#: model:ir.model,name:event_mineducacion.model_purchase_requisition_line
+msgid "Purchase Requisition Line"
+msgstr "Línea de Requerimiento de Compra"
+
+#. module: event_mineducacion
 #: model:ir.model.fields,field_description:event_mineducacion.field_event_event__requisition_id
 msgid "Requisition"
 msgstr "Solicitud de evento"
 
 #. module: event_mineducacion
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition_line__price_subtotal
+msgid "Subtotal"
+msgstr "Subtotal"
+
+#. module: event_mineducacion
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition_line__price_tax
+msgid "Tax"
+msgstr "Impuesto"
+
+#. module: event_mineducacion
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition__amount_tax
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition_line__taxes_id
+msgid "Taxes"
+msgstr "Impuestos"
+
+#. module: event_mineducacion
 #: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition__amount_total
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition_line__price_total
 msgid "Total"
 msgstr "Total"
+
+#. module: event_mineducacion
+#: model:ir.model.fields,field_description:event_mineducacion.field_purchase_requisition__amount_untaxed
+msgid "Untaxed Amount"
+msgstr "Base imponible"
